--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="/Chapter3/style.css" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet">
 </head>
 <body>
     <div class="box">Box1</div>
     <div class="box green">Box2</div>
     <div class="box blue">Box3</div>
-
     
 <div class="challenge2"> 
     <h1>HTML Tutorial</h1> 
